l4s-demo/aws-ec2-for-log4shell-demo.tf
provider "aws" {
  region = var.aws_region
}

# ---------- variable definition ----------

variable "aws_region" {
  description = "AWS region (e.g. us-east-2)"
}

variable "flow_log_bucket_name" {
  description = "The name of the S3 bucket used to store VPC flow log (must be unique within an AWS partition)"
}

variable "s3_access_log_bucket_name" {
  description = "The name of the S3 bucket used to store access log (must be unique within an AWS partition)"
}

variable "ssh_allowed_host_1" {
  type        = string
  description = "CIDR block allowed to ssh to the EC2 VM"
}

variable "ssh_allowed_host_2" {
  type        = string
  description = "CIDR block allowed to ssh to the EC2 VM"
}

variable "ec2_key_pair_name" {
  description = "key pair for connecting to EC2"
}

variable "ec2_ami" {
  description = "AMI used for EC2"
}

variable "ec2_instance_type" {
  description = "Instance type used by EC2 (e.g. t2.micro)"
}

variable "pcc_username" {
  description = "Prisma Cloud username (for SaaS Console, it is the access key ID defined in Setings > Access Keys)"
  sensitive   = "true"
}

variable "pcc_password" {
  description = "Prisma Cloud password (for SaaS Console, it is the secret key defined in Setings > Access Keys)"
  sensitive   = "true"
}

variable "pcc_url" {
  description = "Prisma Cloud Compute Console URL (for SaaS Console, the URL can be found in Compute > Manage > System > Utilities > Path to Console)"
}

variable "pcc_domain_name" {
  description = "Prisma Cloud Compute Console domain name (extracted the domain name from the console URL)"
}

variable "vul_app_image" {
  description = "The name of the image of the vulnerable app"
}

variable "att_svr_image" {
  description = "The name of the image of the attack server"
}

variable "attacker_machine_name" {
  description = "The name of the image of the attacker machine"
}

# ---------- variable definition ends ----------

# Set the default security group without any inbound and outbound rules

resource "aws_default_security_group" "default" {
  vpc_id = aws_vpc.vpc1.id
  tags = {
    yor_trace = "f47cf02c-a259-4e87-96fa-d2ba5ad84046"
  }
}


# Enable VPC flow log

resource "aws_flow_log" "vpc_flow_log" {
  log_destination      = aws_s3_bucket.vpc_flow_log.arn
  log_destination_type = "s3"
  traffic_type         = "ALL"
  vpc_id               = aws_vpc.vpc1.id
  tags = {
    yor_trace = "2eb0dbce-d871-4140-81c5-d730dd7c00fc"
  }
}

# Create S3 bucket for storing flow log

resource "aws_s3_bucket" "vpc_flow_log" {
  bucket        = var.flow_log_bucket_name
  force_destroy = "true"
  tags = {
    yor_trace = "f82a4534-684a-4d87-8b4b-3b0ccc65fd82"
  }
}

# Create vpc

resource "aws_vpc" "vpc1" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = "true"
  tags = {
    Name      = "VPC1"
    yor_trace = "22667212-e3c1-4ce8-9e96-43921c97b637"
  }
}

# Create subnet

resource "aws_subnet" "subnet-1" {
  vpc_id            = aws_vpc.vpc1.id
  cidr_block        = "10.0.0.0/24"
  availability_zone = format("%sa", var.aws_region)

  tags = {
    Name      = "vpc1-subnet-1"
    yor_trace = "dd7f68ef-592b-4f69-8b55-5fd8babc6a43"
  }
}

# Create Internet GW

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc1.id
  tags = {
    yor_trace = "242cb581-18fc-4b83-9816-381d5ab8ff63"
  }
}

# Attach Internet GW to default route table and setup default route

resource "aws_default_route_table" "default_route_table" {
  default_route_table_id = aws_vpc.vpc1.default_route_table_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name      = "default-route-table"
    yor_trace = "9c04f56b-f28a-4fc4-8f35-5146cfb7862a"
  }
}

# Create Security Group to allow port 22, 80, 443

resource "aws_security_group" "allow-ssh-web" {
  name        = "allow-ssh-web"
  description = "Allow SSH and Web inbound traffic"
  vpc_id      = aws_vpc.vpc1.id

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH from specific host"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.ssh_allowed_host_1]
  }
  ingress {
    description = "SSH from specific host"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.ssh_allowed_host_2]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name      = "allow-ssh-web"
    yor_trace = "7e0ab105-f39e-4628-8f4e-5676c9a9e852"
  }
}

# Create Ubuntu EC2

resource "aws_instance" "web-server" {
  ami                         = var.ec2_ami
  instance_type               = var.ec2_instance_type
  key_name                    = var.ec2_key_pair_name
  associate_public_ip_address = "true"
  subnet_id                   = aws_subnet.subnet-1.id
  vpc_security_group_ids      = [aws_security_group.allow-ssh-web.id]

  user_data = <<-EOF
    #!/bin/bash
    set -ex
    # install Docker runtime
    sudo apt update -y
    sudo apt install ca-certificates curl gnupg lsb-release -y
    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
    sudo apt update -y
    sudo apt install docker-ce docker-ce-cli containerd.io -y
    sudo usermod -aG docker ubuntu
    sudo systemctl enable docker.service
    sudo systemctl enable containerd.service
    # install Defender
    sudo apt install jq -y
    AUTH_DATA="$(printf '{ "username": "%s", "password": "%s" }' "${var.pcc_username}" "${var.pcc_password}")"
    TOKEN=$(curl -sSLk -d "$AUTH_DATA" -H 'content-type: application/json' "${var.pcc_url}/api/v1/authenticate" | jq -r ' .token ')
    curl -sSLk -H "authorization: Bearer $TOKEN" -X POST "${var.pcc_url}/api/v1/scripts/defender.sh" | sudo bash -s -- -c "${var.pcc_domain_name}" -d "none" -m
    # setup environments for Log4Shell demo
    docker network create dirty-net
    docker container run -itd --rm --name vul-app-1 --network dirty-net ${var.vul_app_image}
    docker container run -itd --rm --name vul-app-2 --network dirty-net ${var.vul_app_image}
    docker container run -itd --rm --name att-svr --network dirty-net ${var.att_svr_image}
    docker container run -itd --rm --network dirty-net --name attacker-machine ${var.attacker_machine_name}
    # stop learning for vulnerable app container
    PROFILE_ID=$(curl -k -X GET -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.pcc_url}/api/v21.08/profiles/container" | jq -r ' .[] | select(.image == "${var.vul_app_image}") | ._id ')
    curl -k -X POST -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' -d '{"state": "manualActive"}' "${var.pcc_url}/api/v1/profiles/container/$PROFILE_ID/learn"
    # add collections
    curl -k -X POST -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' -d '{"name":"Log4Shell demo - vul-app-1","images":["${var.vul_app_image}"],"containers":["vul-app-1"],"hosts":["*"],"namespaces":["*"],"labels":["*"],"accountIDs":["*"],"clusters":["*"]}' "${var.pcc_url}/api/v21.08/collections"
    curl -k -X POST -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' -d '{"name":"Log4Shell demo - vul-app-2","images":["${var.vul_app_image}"],"containers":["vul-app-2"],"hosts":["*"],"namespaces":["*"],"labels":["*"],"accountIDs":["*"],"clusters":["*"]}' "${var.pcc_url}/api/v21.08/collections"
    # add runtime rules
    NEW_RULES='[{"name":"vul-app-2","previousName":"","collections":[{"name":"Log4Shell demo - vul-app-2"}],"advancedProtection":true,"processes":{"effect":"prevent","blacklist":[],"whitelist":[],"checkCryptoMiners":true,"checkLateralMovement":true,"checkParentChild":true,"checkSuidBinaries":true},"network":{"effect":"alert","blacklistIPs":[],"blacklistListeningPorts":[],"whitelistListeningPorts":[],"blacklistOutboundPorts":[],"whitelistOutboundPorts":[],"whitelistIPs":[],"skipModifiedProc":fals [...]
    ALL_RULES=$(curl -k -X GET -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.pcc_url}/api/v21.08/policies/runtime/container" | jq --argjson nr "$NEW_RULES" ' .rules = $nr + .rules ')
    curl -k -X PUT -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.pcc_url}/api/v21.08/policies/runtime/container" -d "$ALL_RULES"
    # add WAAS rule
    NEW_RULES='[{"name":"vul-app-2","collections":[{"name":"Log4Shell demo - vul-app-2"}],"applicationsSpec":[{"appID":"app-0001","sessionCookieSameSite":"Lax","customBlockResponse":{},"banDurationMinutes":5,"certificate":{"encrypted":""},"tlsConfig":{"minTLSVersion":"1.2","metadata":{"notAfter":"0001-01-01T00:00:00Z","issuerName":"","subjectName":""},"HSTSConfig":{"enabled":false,"maxAgeSeconds":31536000,"includeSubdomains":false,"preload":false}},"dosConfig":{"enabled":false,"alert":{},"ban":{ [...]
    ALL_RULES=$(curl -k -X GET -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.pcc_url}/api/v21.08/policies/firewall/app/container" | jq --argjson nr "$NEW_RULES" ' .rules = $nr + .rules ')
    curl -k -X PUT -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.pcc_url}/api/v21.08/policies/firewall/app/container" -d "$ALL_RULES"
    # enable WildFire
    curl -k -X PUT -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.pcc_url}/api/v1/settings/wildfire" -d '{"region":"sg","runtimeEnabled":true,"complianceEnabled":true,"uploadEnabled":true,"graywareAsMalware":false}'
    EOF

  tags = {
    Name      = "web-server"
    yor_trace = "76a02e5e-7302-479e-903b-21c479fdb036"
  }
}

output "server_public_ip" {
  value = aws_instance.web-server.public_ip
}
